This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.36 (UNRELEASED)

 * Enhancements:

 * Bug fixes:

0.35 (2014-02-09)

 * Enhancements:
   - Migrated to Python 3
   - Added translator credits to about dialog (LP: #1273673)
   - Updated translations

 * Bug fixes:

0.34 (2014-01-18)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fix new PyGI deprecations

0.33 (2013-10-02)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Don't crash when search string ends with a backslash (LP: #1231744)

0.32 (2013-09-26)

 * Enhancements:

 * Bug fixes:
   - Allow search to work on entries in collapsed folders

0.31 (2013-09-26)

 * Enhancements:

 * Bug fixes:
   - Don't crash when attempting to add an entry with nothing selected

0.30 (2013-09-08)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fix help file location when using python-distutils-extra >= 2.38

0.29 (2013-09-04)

 * Enhancements:
   - Implemented folder expansion saving to database
   - Implemented folder expansion preferences
   - Folder window size is now saved
   - Updated translations

 * Bug fixes:
   - Set icon column sizing to automatic so tree doesn't move around

0.28 (2013-08-15)

 * Enhancements:

 * Bug fixes:
   - Fix some translation mistakes in the fr help file (LP: #1210552)
   - Fix crash when changing the show secrets setting
   - Mark some more menu entries as translatable
   - Perform case-insensitive sort on entries and folders

0.27 (2013-08-12)

 * Enhancements:
   - Implemented drag and drop of folders and entries
   - Fix broken menu entries when gtk is configured to show icons in menus
   - Deactivate certain menu items when a folder is selected

 * Bug fixes:

0.26 (2013-08-11)

 * Enhancements:

 * Bug fixes:
   - Folder text entry now activates OK button (thanks jdstrand!)
   - Tree now sorts folders before directories (thanks jdstrand!)