@@ -974,7 +974,9 @@
                         <property name="can_focus">True</property>
                         <property name="editable">False</property>
                         <property name="wrap_mode">word</property>
-                        <property name="justification">center</property>
+                        <property name="justification">left</property>
+                        <property name="left-margin">10</property>
+                        <property name="right-margin">10</property>
                       </object>
                     </child>
                   </object>
